--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=changeme
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
-MODEL_PATH="/home/cptzeph/Desktop/Programs/python/full_fraud_app/ml_models.pkl"
+MODEL_PATH="C:\programs\full_fraud_app\ml_models.pkl"
 DARJA_CLIENT_KEY=your_daraja_client_key
 DARJA_CLIENT_SECRET=your_daraja_client_secret
 DARJA_SHORTCODE=174379
